# pilltalks

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  pyproject.toml  styles.css  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: demo.md
examples/: bridge_server.py
pillbot/: agent.py  config.py  main.py  transports.py  types.py
pilltalks/: agent.py  config.py  logging_utils.py  main.py  transports.py
src/: config.ts  index.ts
src/agent/: pillBotAgent.ts  types.ts
src/transports/: chatTransport.ts  pumpfunLiveTransport.ts  stdinTransport.ts
tests/: test_agent.py  test_config.py  test_transports.py
