[project]
name = "pilltalks"
version = "1.0.2"
description = "PillTalks is a Python live chat agent for pump.fun-style workflows with automated replies, safety checks, local simulation, and a configurable live transport layer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "" }]
keywords = ["pumpfun", "chat-agent", "python", "safety", "bridge"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Chat",
  "Topic :: Security"
]

[project.urls]
Homepage = "https://github.com/JankyTheDev/pilltalks"
Repository = "https://github.com/JankyTheDev/pilltalks"
Issues = "https://github.com/JankyTheDev/pilltalks/issues"
Security = "https://github.com/JankyTheDev/pilltalks/security"

[project.scripts]
pilltalks = "pilltalks.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pilltalks*"]
